Correlation between runtime and profit

--- a/main.ipynb
+++ b/main.ipynb
@@ -714,6 +714,143 @@
     "3. Wednesday has the highest average popularity too i.e 32.69 units\n",
     "4. Sunday has the lowest average popularity i.e. 14.35 units"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How the time duration has been affecting High Profits, High Voting Average and High Popularity over the years from 2000 to 2017 ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cl_mov.query('year >= 2000')['year'].value_counts().plot(kind='pie', figsize=(8, 8), autopct='%1.1f%%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_v1 = cl_mov.query('year >= 2000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correlation_coefficient = df_v1['runtime'].corr(df_v1['profit'])\n",
+    "print(correlation_coefficient)\n",
+    "\n",
+    "# Assuming df_v1 is your DataFrame\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(df_v1['runtime'], df_v1['profit'], alpha=0.5)\n",
+    "plt.title('Profit vs. Runtime')\n",
+    "plt.xlabel('Runtime')\n",
+    "plt.ylabel('Profit')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**From the above calculations and the overall trend, we decided the ranges**\n",
+    "\n",
+    "**a. 0-80 for short movies**\n",
+    "\n",
+    "**b. 80-140 for medium movies**\n",
+    "\n",
+    "**c. Greater than 140 for long movies**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5. Divide the dataset in 3 different subsets according to the above defined ranges for runtime**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Form a dataset for short movies\n",
+    "df_v2 = df_v1.query('runtime < 80')\n",
+    "\n",
+    "correlation_coefficient = df_v2['runtime'].corr(df_v1['profit'])\n",
+    "print(correlation_coefficient)\n",
+    "\n",
+    "# Assuming df_v1 is your DataFrame\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(df_v2['runtime'], df_v2['profit'], alpha=0.5)\n",
+    "plt.title('Profit vs. Runtime')\n",
+    "plt.xlabel('Runtime')\n",
+    "plt.ylabel('Profit')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Form a dataset for medium movies\n",
+    "df_v3 = df_v1.query('(runtime >= 80) & (runtime <140)')\n",
+    "\n",
+    "correlation_coefficient = df_v3['runtime'].corr(df_v1['profit'])\n",
+    "print(correlation_coefficient)\n",
+    "\n",
+    "# Assuming df_v1 is your DataFrame\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(df_v3['runtime'], df_v3['profit'], alpha=0.5)\n",
+    "plt.title('Profit vs. Runtime')\n",
+    "plt.xlabel('Runtime')\n",
+    "plt.ylabel('Profit')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Form a dataset for long movies\n",
+    "df_v4 = df_v1.query('runtime >= 140')\n",
+    "\n",
+    "correlation_coefficient = df_v4['runtime'].corr(df_v1['profit'])\n",
+    "print(correlation_coefficient)\n",
+    "\n",
+    "# Assuming df_v1 is your DataFrame\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(df_v4['runtime'], df_v4['profit'], alpha=0.5)\n",
+    "plt.title('Profit vs. Runtime')\n",
+    "plt.xlabel('Runtime')\n",
+    "plt.ylabel('Profit')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "there is no correlation between runtime and profit"
+   ]
   }
  ],
  "metadata": {
