--- a/main.ipynb
+++ b/main.ipynb
@@ -222,8 +222,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df = pd.concat([df_movies, df_credits[['movie_id', 'cast']]], axis=1)\n",
-    "merged_df.head()"
+    "df = pd.concat([df_movies, df_credits[['movie_id', 'cast']]], axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the 'profitable' column\n",
+    "df['profitable'] = df.revenue > df.budget\n",
+    "df['profitable'] = df['profitable'].astype(int)\n",
+    "\n",
+    "# Defining the Outcomes\n",
+    "regression_target = 'revenue'\n",
+    "classification_target = 'profitable'\n",
+    "\n",
+    "df[\"profitable\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.isnull().sum()"
    ]
   },
   {
