--- a/main.ipynb
+++ b/main.ipynb
@@ -1122,6 +1122,16 @@
    "source": [
     "there is no correlation between runtime and profit"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analysing all the features from a statistical point of view\n",
+    "df.describe()"
+   ]
   }
  ],
  "metadata": {
