--- a/main.ipynb
+++ b/main.ipynb
@@ -1299,6 +1299,129 @@
     "* After Titanic (1997) which was the first movie to reach 1 billion dollar mark, 2010, 2011, 2012, 2013 and 2015 had many movies crossing the billion dollar mark signimficantly.\n",
     "* There has been an increase in the revenue of movies filmed till 2012 which showed the peak revenue generated, and although it decreased sharply for 2013 and 2014 yet, it again increased in 2015"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trend Analysis of `vote_average` of movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.log10(3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting and printing the sorted sub-dataset of title, vote_average, vote_count and year of the movies for which vote_count is greater than 3000\n",
+    "df[df['vote_count'] > 3.477][['title', 'vote_average', 'vote_count' ,'year']].sort_values('vote_average', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Observations:\n",
+    "* These are the 1st 10 movies in rank considering the vote_average feature\n",
+    "* We observe that The Shawshank Redemption (1994) is the movie with the highest vote_average ever"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting the correlation graph between vote_average and popularity\n",
+    "sns.jointplot(x='vote_average', y='popularity', data=df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Observations:\n",
+    "* Some corelation between vote_average and popularity is observed. \n",
+    "* The movies that have high vote_average doesn't necessarily have to be highly popular.\n",
+    "* There are outliers present, although not too many.\n",
+    "* The relation is mostly linear."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genre feature Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting the number of of each genre used throughout the total dataset\n",
+    "Movies = []\n",
+    "for genre in genres:\n",
+    "    Movies.append(df[genre].value_counts()[1])\n",
+    "Movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a new dataframe to store the genres and their count in a sorted order\n",
+    "pop_gen = pd.DataFrame(Movies, genres).reset_index()\n",
+    "pop_gen.columns = ['genre', 'movies']\n",
+    "pop_gen = pop_gen[~pop_gen['genre'].str.contains('id')]\n",
+    "pop_gen['genre'] = pop_gen['genre'].str.replace('name', '').str.replace('\"','').str.replace(':','').str.replace('}', '').str.replace(']', '').str.replace('[', '')\n",
+    "pop_gen = pop_gen.groupby('genre').sum().reset_index()\n",
+    "pop_gen['genre'] = pop_gen['genre'].str.strip()\n",
+    "pop_gen = pop_gen[pop_gen['genre'] != '']\n",
+    "pop_gen.sort_values(by='movies', inplace=True, ascending=False, ignore_index=True)\n",
+    "pop_gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting the first 15 genres and their movie count\n",
+    "# plt.figure(figsize=(20,8))\n",
+    "# sns.barplot(x='genre', y='movies', data=pop_gen.head(15))\n",
+    "plt.figure(figsize=(20,8))\n",
+    "bars = plt.bar(pop_gen.head(15)['genre'], pop_gen.head(15)['movies'])\n",
+    "for bar in bars:\n",
+    "    height = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width() / 2, height, f'{height:.2f}%', ha='center', va='bottom')\n",
+    "\n",
+    "plt.xlabel(\"Genre\")\n",
+    "plt.ylabel(\"Count\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Observations:\n",
+    "* Drama is the most used genre in the Film Industry.\n",
+    "* Comdey and Thriller genres follow after it.\n",
+    "* Foreign and TV Movie genres has the lowest movie count (excluded in the graph)."
+   ]
   }
  ],
  "metadata": {
