max budget, revenue (general analysis)

--- a/main.ipynb
+++ b/main.ipynb
@@ -1422,6 +1422,82 @@
     "* Comdey and Thriller genres follow after it.\n",
     "* Foreign and TV Movie genres has the lowest movie count (excluded in the graph)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General Movie Trend Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking the most expensive movie ever made\n",
+    "df2 = df[df['budget'].notnull()][['title', 'budget', 'revenue', 'return', 'year']].sort_values('budget', ascending=False)\n",
+    "df2.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Printing the Highest Budget that was expended by \"Pirates of the Caribbean: On Stranger Tides\"\n",
+    "10 ** df2['budget'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking the highest grossing movies of all time\n",
+    "gross_top = df2[['title', 'budget', 'revenue', 'year']].sort_values('revenue', ascending=False).head(10)\n",
+    "gross_top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "10 ** gross_top['revenue'][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Observations: \n",
+    "* The mighty Avatar was the highest grossing movie of all time, since it generated the highest revenue ever, which was surpassed recently by the Avengers: End Game."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking the trend of revenue over the years\n",
+    "plt.figure(figsize=(18,5))\n",
+    "year_revenue = df2.groupby('year')['revenue'].max()\n",
+    "year_revenue.plot(kind='line')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Observations:\n",
+    "* We can see that the revenue has been steadily increasing over the years "
+   ]
   }
  ],
  "metadata": {
