modify list of genres and columns related to this

--- a/main.ipynb
+++ b/main.ipynb
@@ -521,10 +521,15 @@
     "        if genre not in genres:\n",
     "            genres.append(genre)\n",
     "\n",
+    "genres = [item for item in genres if 'id' not in item]\n",
+    "for i in range(len(genres)):\n",
+    "    genres[i] = genres[i].replace('name', '').replace('\"','').replace(':','').replace('}', '').replace(']', '').replace('[', '').strip()\n",
+    "genres = [item for item in genres if len(item)!=0]\n",
+    "\n",
     "# Encoding the Genres\n",
     "for genre in genres:\n",
-    "    escaped_genre = re.escape(genre)\n",
-    "    df[genre] = df['genres'].str.contains(escaped_genre).astype(int)\n",
+    "    df[genre] = df['genres'].str.contains(genre).astype(int)\n",
+    "\n",
     "\n",
     "df[genres]"
    ]
@@ -1385,11 +1390,7 @@
     "# Creating a new dataframe to store the genres and their count in a sorted order\n",
     "pop_gen = pd.DataFrame(Movies, genres).reset_index()\n",
     "pop_gen.columns = ['genre', 'movies']\n",
-    "pop_gen = pop_gen[~pop_gen['genre'].str.contains('id')]\n",
-    "pop_gen['genre'] = pop_gen['genre'].str.replace('name', '').str.replace('\"','').str.replace(':','').str.replace('}', '').str.replace(']', '').str.replace('[', '')\n",
     "pop_gen = pop_gen.groupby('genre').sum().reset_index()\n",
-    "pop_gen['genre'] = pop_gen['genre'].str.strip()\n",
-    "pop_gen = pop_gen[pop_gen['genre'] != '']\n",
     "pop_gen.sort_values(by='movies', inplace=True, ascending=False, ignore_index=True)\n",
     "pop_gen"
    ]
