Baseline model for classification

--- a/main.ipynb
+++ b/main.ipynb
@@ -1634,6 +1634,63 @@
     "\n",
     "This clearly shows that the baseline model for `forest_regression` works better than that of `linear_regression`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performance of Baseline Classification Models\n",
+    "\n",
+    "In this segment, we will compute cross-validated performance for the logistic and random forest classification models.\n",
+    "\n",
+    "#### Instructions \n",
+    "- Call `cross_val_score` using `logistic_regression` and `forest_classifier` as models. Store the output as `logistic_regression_scores` and `forest_classification_scores`, respectively.\n",
+    "    - Set the parameters `cv=10` to use 10-fold cross-validation and `scoring=accuracy` to use our accuracy function defined in the previous exercise.\n",
+    "- Plotting code has been provided to compare the performance of the two models. Use `plt.show()` to plot the `accuracy` of predicted `profitability` for each cross-validation fold using the logistic and random forest classification models.\n",
+    "- We observe that both models performs good for the classification but `forest_classifier` works a bit better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Determine the cross-validated accuracy for logistic and random forest models.\n",
+    "logistic_regression_scores = cross_val_score(logistic_regression, covariates, classification_outcome, cv=10, scoring=accuracy)\n",
+    "forest_classification_scores = cross_val_score(forest_classifier, covariates, classification_outcome, cv=10, scoring=accuracy)\n",
+    "# Plot Results\n",
+    "plt.figure(figsize=(8,8), facecolor='w', dpi=120)\n",
+    "plt.axes().set_aspect('equal', 'box')\n",
+    "plt.scatter(logistic_regression_scores, forest_classification_scores)\n",
+    "plt.plot((0, 1), (0, 1), 'k-')\n",
+    "\n",
+    "plt.xlim(0, 1)\n",
+    "plt.ylim(0, 1)\n",
+    "plt.xlabel(\"Linear Classification Score\")\n",
+    "plt.ylabel(\"Forest Classification Score\")\n",
+    "\n",
+    "# print the scores\n",
+    "print(\"Logistic Regression Scores:\", logistic_regression_scores, \"\\nForest Classification Scores:\", forest_classification_scores)\n",
+    "\n",
+    "# Print the mean scores\n",
+    "print(\"Logistic Regression Score:\", np.mean(logistic_regression_scores), \"\\nForest Classification Scores:\", np.mean(forest_classification_scores))\n",
+    "\n",
+    "# Show the plot.\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We observe that 10-fold `cross-validation` of - \n",
+    " `forest_classification` scores range mainly from 0.9 to 1\n",
+    "\n",
+    "`logistic_regression` scores range from 0.8 to 0.9\n",
+    "\n",
+    "This clearly shows that `forest_classification` works a bit better than `logistic_regression`"
+   ]
   }
  ],
  "metadata": {
